test/sematest/invalid/duplicate_classes.java
class Class1 {}
class Class1 {}
